# cua_template

./: README.md  pyproject.toml
src/core/: clients.py  main.py  prompts.py  utils.py  workflow.py
